--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>heart letter by alexx_deev</title>
+  <title>Lovee letter</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -28,17 +28,6 @@
     <button id="open">Open</button>
     <button id="reset">Reset</button>
 </div>
-
-<!-- 
-
-Inspired by:
-
-    *Ig alexx_deev
-    * Instagram: https://www.instagram.com/alexx_deev?igsh=a3IyMnY0ZjdnZjJ0 
-    * https://www.instagram.com/alexx_deev?igsh=a3IyMnY0ZjdnZjJ0   
-
--->
-<!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="./script.js"></script>
 
 </body>
