--- a/index.html
+++ b/index.html
@@ -11,27 +11,22 @@
       <div class="surat hidden" id="surat" style="display: none">
         <h1>Hi love!</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          accusantium distinctio cum quam voluptate sed, vero quod similique
-          molestiae maiores. Est magnam explicabo dolor vitae rem quas sequi
-          quaerat culpa nisi incidunt accusantium eveniet assumenda suscipit
-          sint amet autem, cupiditate vel placeat quis ad. Corrupti possimus
-          repellendus tempora, qui eligendi libero maxime vel consequuntur velit
-          voluptas debitis, iure natus repudiandae?
+          Hai, apakabar ?, semoga kamu baik baik aja yaa. 
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt,
-          blanditiis voluptate. Provident sapiente et neque, qui assumenda amet
-          ut placeat nemo, optio omnis veniam cumque incidunt minima a accusamus
-          sed! Quidem, officiis sapiente assumenda in voluptate optio hic
-          tempora enim libero similique sit quaerat ab expedita corporis fuga
-          est quo!
+          maaf ya buat valentine kali ini aku cuman bisa kasih love letter aja karna jarak dan kondisi yang ngga memungkinkan untuk bertemu
+by the way udah hampir 10 bulan kita usai ya,
+dusta kalau aku bilang aku biasa biasa aja setelah putus memang life after breakup itu menyakitkan
         </p>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-          sint non, vero illum nemo nihil, veritatis temporibus maiores
-          voluptates odit dolor excepturi. Eligendi, rem magni beatae ea
-          laboriosam corrupti. Et?
+          tapi aku sama sekali ngga menyesali tentang perpisahan hubungan kita, apa yang sudah kita lakukan dan lalui akan menjadi yang terbaik.
+Terimakasih untuk sudah mau menerimaku dan bersama, melewati banyak hal semua itu adalah waktu yang begitu indah untuk dikenang, dulu kita pernah berangan-angan kalau kita akan selalu bersama-sama dan dulu aku merasa aku akan bersama mu selama lamanya
+        </p>
+        <p>
+          Cinta dan pemahaman, rasa sedih dan rasa kekecewaan tidak selalu berarti kekalahan, Sekarang yang tetap di dalam diriku adalah kenangan yang akan tetap ada hingga akhir hayat. Tapi aku harap di suatu hari nanti kita akan bisa bersama sama lagi seperti dahulu kala
+        </p>
+        <p>
+          Sekali lagi aku minta maaf karna valentine kali ini ngga se asik yang lalu, Terimakasih karna sudah menerimaku akhir kata Wassalamualaikum warrahmatullahi wabarakatuh, I love you more than everyone does
         </p>
       </div>
       <div class="btn-love" id="btn">
