--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+<audio controls>
+    <source src="/music/PenjagaHati.mp3" type="audio/mpeg">
+    Browsermu tidak mendukung tag audio, upgrade donk!
+  </audio>
     <div class="container">
       <div class="surat hidden" id="surat" style="display: none">
         <h1>Hi love!</h1>
