--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-<audio controls>
+  <audio hidden autoplay loop>
     <source src="/music/PenjagaHati.mp3" type="audio/mpeg">
-    Browsermu tidak mendukung tag audio, upgrade donk!
   </audio>
     <div class="container">
       <div class="surat hidden" id="surat" style="display: none">
